# airan-desk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README_RK3288_UBUNTU18.04.md
resource/: main.rc  uac.manifest
resource/conf/: common.ini
src/: control_window.cpp  control_window.h  file_transfer_window.cpp  file_transfer_window.h  file_transfer_window.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui
src/codec/: codec_info.h  h264_decoder.cpp  h264_decoder.h  h264_encoder.cpp  h264_encoder.h  h264_encoder_zerocopy_win.cpp  hardware_context_manager.cpp  hardware_context_manager.h
src/common/: constant.h  logger_manager.cpp  logger_manager.h
src/desktop/: desktop_capture_manager.cpp  desktop_capture_manager.h  desktop_capture_worker.cpp  desktop_capture_worker.h  desktop_grab.cpp  desktop_grab.h  desktop_grab_dxgi.cpp  desktop_grab_dxgi.h  desktop_grab_qt.cpp  desktop_grab_qt.h  desktop_grab_wgc.cpp  desktop_grab_wgc.h
src/util/: config_util.cpp  config_util.h  convert_util.cpp  convert_util.h  ffmpeg_util.cpp  ffmpeg_util.h  file_packet_util.cpp  file_packet_util.h  input_util.cpp  input_util.h  json_util.cpp  json_util.h  key_util.h
src/webrtc/: webrtc_cli.cpp  webrtc_cli.h  webrtc_ctl.cpp  webrtc_ctl.h
src/websocket/: ws_cli.cpp  ws_cli.h
